--- a/dev/scss/header/state.scss
+++ b/dev/scss/header/state.scss
@@ -3,6 +3,6 @@
  */
 
 // Hide state
-input[name=state] {
+#state {
   display: none;
 }
